@@ -4,7 +4,6 @@ import org.jetbrains.annotations.NotNull;
 
 import java.util.Dictionary;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 public final class CharacterReplaceFactory {
     private CharacterReplaceFactory() {
@@ -14,7 +13,7 @@ public final class CharacterReplaceFactory {
         return text -> {
             final StringBuilder builder = new StringBuilder();
 
-            for (char ch : text.chars().mapToObj(i -> (char) i).collect(Collectors.toList())) {
+            for (char ch : text.chars().mapToObj(i -> (char) i).toList()) {
                 final String replaced = replaceDictionary.get(ch);
                 builder.append(replaced == null ? ch : replaced);
             }
